Entidades do dominio adicionadas

--- a/ProductApi.Infrastructure/ProductApi.Infrastructure.csproj
+++ b/ProductApi.Infrastructure/ProductApi.Infrastructure.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProductApi.Domain\ProductApi.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
