--- a/ProductApi.WebAPI/appsettings.json
+++ b/ProductApi.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=ProductDb;Username=postgres;Password=1234"
+  },
   "AllowedHosts": "*"
 }
