--- a/ProductApi.WebAPI/ProductApi.WebAPI.csproj
+++ b/ProductApi.WebAPI/ProductApi.WebAPI.csproj
@@ -21,12 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ProductApi.Application\ProductApi.Application.csproj" />
     <ProjectReference Include="..\ProductApi.Domain\ProductApi.Domain.csproj" />
     <ProjectReference Include="..\ProductApi.Infrastructure\ProductApi.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
