--- a/ProductApi.WebAPI/Properties/launchSettings.json
+++ b/ProductApi.WebAPI/Properties/launchSettings.json
@@ -16,7 +16,9 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5238",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "Auth__Username": "admin",
+        "Auth__Password": "password"
       }
     },
     "https": {
@@ -26,7 +28,9 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7274;http://localhost:5238",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "Auth__Username": "admin",
+        "Auth__Password": "password"
       }
     },
     "IIS Express": {
