--- a/ProductApi.WebAPI/appsettings.json
+++ b/ProductApi.WebAPI/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=ProductDb;Username=postgres;Password=1234"
+    //"DefaultConnection": "Host=localhost;Database=ProductDb;Username=postgres;Password=1234"
+    "DefaultConnection": "postgresql://postgres:KZgAnQVEvkuWXCyOUslYWrkXVRIrQcFV@postgres.railway.internal:5432/railway"
   },
   "AllowedHosts": "*"
 }
