--- a/ProductApi.WebAPI/appsettings.json
+++ b/ProductApi.WebAPI/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    //"DefaultConnection": "Host=localhost;Database=ProductDb;Username=postgres;Password=1234"
-    "DefaultConnection": "postgresql://postgres:KZgAnQVEvkuWXCyOUslYWrkXVRIrQcFV@postgres.railway.internal:5432/railway"
+    "DefaultConnection": "Host=localhost;Database=ProductDb;Username=postgres;Password=1234"
   },
   "AllowedHosts": "*"
 }
